--- a/projects/ui/src/lib/components/nav-panel/nav-panel.component.html
+++ b/projects/ui/src/lib/components/nav-panel/nav-panel.component.html
@@ -1,13 +1,10 @@
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
+  <span>Task Tracker</span>
+  <button mat-flat-button class="create" color="accent" (click)="buttonClick('popup')">
+    <span>Create task</span>
   </button>
-  <span>My App</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
+  <button mat-flat-button color="accent" (click)="buttonClick('tasksList')">
+    <span>ALL TASKS</span>
   </button>
 </mat-toolbar>
