--- a/projects/ui/src/lib/components/single-task/single-task.component.html
+++ b/projects/ui/src/lib/components/single-task/single-task.component.html
@@ -1,1 +1,39 @@
-<p>single-task works!</p>
+<div class="grid-container">
+  <div class="grid-item title"><h2>Title</h2></div>
+  <div class="grid-item executor">Executor</div>
+  <div class="grid-item name">
+    <button [matMenuTriggerFor]="executor">name</button>
+    <mat-menu #executor="matMenu">
+      <button mat-menu-item>Item 1</button>
+      <button mat-menu-item>Item 2</button>
+    </mat-menu>
+  </div>
+  <div class="grid-item deadline">Deadline</div>
+  <div class="grid-item datepicker">
+    <mat-form-field class="example-full-width">
+      <mat-label>Choose a date</mat-label>
+      <input (click)="picker.open()" matInput [matDatepicker]="picker">
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
+  <div class="grid-item priority">Priority</div>
+  <div class="grid-item menu">
+    <button mat-button color = "primary" [matMenuTriggerFor]="priority">Menu</button>
+    <mat-menu #priority="matMenu">
+      <button mat-menu-item>Item 1</button>
+      <button mat-menu-item>Item 2</button>
+    </mat-menu>
+  </div>
+  <div class="grid-item status">Status</div>
+  <div class="grid-item status-menu">
+    <button [matMenuTriggerFor]="status">Menu</button>
+    <mat-menu #status="matMenu">
+      <button mat-menu-item>Item 1</button>
+      <button mat-menu-item>Item 2</button>
+    </mat-menu>
+  </div>
+  <div class="grid-item description">Описание</div>
+  <div class="grid-item description-field">поле описания</div>
+  <div class="grid-item button"><button>выполнено</button></div>
+</div>
+
