--- a/projects/ui/src/lib/components/tasks-list/tasks-list.component.scss
+++ b/projects/ui/src/lib/components/tasks-list/tasks-list.component.scss
@@ -9,6 +9,7 @@ table {
 
 .task-name {
   text-align: left;
+  border-right: none;
 }
 
 td {
@@ -27,4 +28,17 @@ td {
   border: none;
 }
 
+.edit {
+  text-align: center;
+  border-left: none;
+  width: 2%;
+}
+
+.name {
+  width: 40%;
+}
+
+.deleteCol {
+  width: 3%;
+}
 
