--- a/projects/ui/src/lib/components/single-task/single-task.component.scss
+++ b/projects/ui/src/lib/components/single-task/single-task.component.scss
@@ -1,8 +1,8 @@
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* Создание трех колонок */
-  grid-template-rows: repeat(8, 60px); /* Создание восьми рядов высотой 60px */
-  grid-gap: 2px; /* Расстояние между элементами сетки */
+  grid-template-rows: repeat(8, 40px);
+  grid-gap: 2px;
 }
 
 .grid-item {
@@ -10,12 +10,14 @@
   align-items: center;
   padding: 10px;
   background: lightgray; /* Цвет фона для наглядности */
-  //padding: 10px; /* Отступы внутри элементов */
-  text-align: left; /* Выравнивание текста по левому краю */
+  text-align: left;
 }
 
 /* Стили для конкретных элементов */
-.title { grid-area: 1 / 1 / 2 / 4; } /* Занимает все три колонки в первом ряду */
+.title {
+  grid-area: 1 / 1 / 2 / 4;
+  padding-top: 20px;
+}
 .executor { grid-area: 2 / 1 / 3 / 2; }
 .name { grid-area: 2 / 2 / 3 / 3; }
 .deadline { grid-area: 3 / 1 / 4 / 2; }
@@ -27,3 +29,4 @@
 .description { grid-area: 6 / 1 / 7 / 4; }
 .description-field { grid-area: 7 / 1 / 8 / 4; }
 .button { grid-area: 8 / 3 / 9 / 4; }
+
