fixed localStorage and task-create property - buttons

--- a/projects/ui/src/lib/components/single-task/single-task.component.html
+++ b/projects/ui/src/lib/components/single-task/single-task.component.html
@@ -1,4 +1,4 @@
-@if (activeTask) {
+@if (activeTask && activeTask[0]) {
   <div class="grid-container">
     <div class="grid-item title"><h2>{{ activeTask[0].name }}</h2></div>
     <div class="grid-item executor">Executor</div>
