--- a/projects/ui/src/lib/components/task-create-property/task-create-property.component.html
+++ b/projects/ui/src/lib/components/task-create-property/task-create-property.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <mat-label>Select {{ label }}</mat-label>
+  <mat-label>Choose {{ label }}</mat-label>
   <mat-select disableRipple>
     @for (item of propertyList; track item.name) {
       <mat-option (click)="buttonClick(item.name)" [value]="item.name">{{ item.name }}</mat-option>
