--- a/projects/ui/src/lib/components/task-create-sample/task-create-sample.component.html
+++ b/projects/ui/src/lib/components/task-create-sample/task-create-sample.component.html
@@ -1,6 +1,5 @@
 <mat-card>
   <mat-card-content>
-
     <div>
       <mat-form-field>
         <mat-label>Title task</mat-label>
@@ -26,12 +25,11 @@
     </div>
 
     <div align="center">
-        <button mat-stroked-button [matMenuTriggerFor]="executor">{{ User }}</button>
-        <mat-menu #executor="matMenu">
-          @for (item of executorList; track name) {
-            <button mat-menu-item (click)="buttonClick(item.name, 'setExecutor')">{{ item.name }}</button>
-          }
-        </mat-menu>
+      <task-create-property
+        [label]="'Executor'"
+        [propertyList]="executorList"
+        (emitter)="events($event, 'setExecutor')">
+      </task-create-property>
     </div>
 
     <div align="center">
@@ -44,21 +42,19 @@
     </div>
 
     <div align="center">
-      <button mat-stroked-button [matMenuTriggerFor]="priority">{{ Priority }}</button>
-      <mat-menu #priority="matMenu">
-        @for (item of priorityList; track name) {
-        <button mat-menu-item (click)="buttonClick(item.name, 'setPriority')">{{ item.name }}</button>
-        }
-      </mat-menu>
+      <task-create-property
+        [label]="Priority"
+        [propertyList]="priorityList"
+        (emitter)="events($event, 'setPriority')">
+      </task-create-property>
     </div>
 
     <div align="center">
-      <button mat-stroked-button [matMenuTriggerFor]="status">{{ Status }}</button>
-      <mat-menu #status="matMenu">
-        @for (item of statusList; track name) {
-          <button mat-menu-item (click)="buttonClick(item.name, 'setStatus')">{{ item.name }}</button>
-        }
-      </mat-menu>
+      <task-create-property
+        [label]="Status"
+        [propertyList]="statusList"
+        (emitter)="events($event, 'setStatus')">
+      </task-create-property>
     </div>
 
     <mat-card-actions>
