--- a/projects/ui/src/lib/components/single-task/single-task.component.html
+++ b/projects/ui/src/lib/components/single-task/single-task.component.html
@@ -3,33 +3,30 @@
     <div class="grid-item title"><h2>{{ activeTask[0].name }}</h2></div>
     <div class="grid-item executor">Executor</div>
     <div class="grid-item executor-value">
-      <button [matMenuTriggerFor]="executor" mat-button color = "primary">{{ activeTask[0].properties.executor }}</button>
-      <mat-menu #executor="matMenu">
-        @for (item of executorList; track item.name) {
-          <button mat-menu-item (click)="buttonClick(item.name, activeTask[0].id, 'setExecutor')">{{ item.name }}</button>
-        }
-      </mat-menu>
+      <reset-property-button
+        [propertiesList]="executorList"
+        [property]="activeTask[0].properties.executor"
+        (emitter)="buttonClick($event, activeTask[0].id, 'setExecutor')">
+      </reset-property-button>
     </div>
     <div class="grid-item deadline">Deadline</div>
     <div class="grid-item deadline-value">
     </div>
     <div class="grid-item priority">Priority</div>
     <div class="grid-item priority-value">
-      <button mat-button color = "primary" [matMenuTriggerFor]="priority">{{ activeTask[0].properties.priority }}</button>
-      <mat-menu #priority="matMenu">
-        @for (item of priorityList; track item.name) {
-          <button mat-menu-item (click)="buttonClick(item.name, activeTask[0].id, 'setPriority')">{{ item.name }}</button>
-        }
-      </mat-menu>
+      <reset-property-button
+        [propertiesList]="priorityList"
+        [property]="activeTask[0].properties.priority"
+        (emitter)="buttonClick($event, activeTask[0].id, 'setPriority')">
+      </reset-property-button>
     </div>
     <div class="grid-item status">Status</div>
     <div class="grid-item status-value">
-      <button [matMenuTriggerFor]="status" mat-button color = "primary">{{ activeTask[0].properties.status }}</button>
-      <mat-menu #status="matMenu">
-        @for (item of statusList; track item.name) {
-          <button mat-menu-item (click)="buttonClick(item.name, activeTask[0].id, 'setStatus')">{{ item.name }}</button>
-        }
-      </mat-menu>
+      <reset-property-button
+        [propertiesList]="statusList"
+        [property]="activeTask[0].properties.status"
+        (emitter)="buttonClick($event, activeTask[0].id, 'setStatus')">
+      </reset-property-button>
     </div>
     <div class="grid-item description">Description</div>
     <div class="grid-item description-value">{{ activeTask[0].description }}</div>
