--- a/projects/ui/src/lib/components/single-task/single-task.component.html
+++ b/projects/ui/src/lib/components/single-task/single-task.component.html
@@ -11,6 +11,12 @@
     </div>
     <div class="grid-item deadline">Deadline</div>
     <div class="grid-item deadline-value">
+<!--      <mat-form-field (click)="picker.open()">-->
+<!--        <mat-label>Choose a date</mat-label>-->
+<!--        <input matInput [matDatepicker]="picker" (dateChange)="buttonClick(inputField.value, activeTask[0].id,'setDeadline')">-->
+<!--        <mat-hint>MM/DD/YYYY</mat-hint>-->
+<!--        <mat-datepicker #picker></mat-datepicker>-->
+<!--      </mat-form-field>-->
     </div>
     <div class="grid-item priority">Priority</div>
     <div class="grid-item priority-value">
